静态资源各个环境路径处理，异步加载整合

--- a/multiple-entry/src/modules/index/index.html
+++ b/multiple-entry/src/modules/index/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>index page</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
+  <link rel="stylesheet" href="https://unpkg.com/mint-ui/lib/style.css">
   <script src="<%= htmlWebpackPlugin.options.staticPath %>static/js/zepto/zepto.min.js"></script>
 </head>
 <script>
